# app/requests/ordering.request.go
@@ -1,0 +1,5 @@
+package requests
+
+type OrderingRequest struct {
+	Items    []ObjectCounter   `json:"menuItems"`
+}
