# app/responses/stats.response.go
@@ -1,0 +1,7 @@
+package responses
+
+type StatsResponse struct {
+	Weight   float64 `json:"weight"`
+	Calories float64 `json:"calories"`
+	Price    float64 `json:"price"`
+}
