# app/structs/ids-array.struct.go
@@ -1,0 +1,5 @@
+package structs
+
+type IdsArray struct {
+	Ids    []int64 `json:"ids"`
+}
