# app/structs/simple-id.struct.go
@@ -1,0 +1,5 @@
+package structs
+
+type SimpleId struct {
+	Id    int64 `json:"id"`
+}
